sh2c/tests/fixtures/unknown_function_is_error.sh2
func main() { let x = nope("arg") }
